Solve a bug with auxiliary values and add dozens of new tests
* The new tests bolster coverage significantly. From an initial
  61% line coverage and 50% mutation coverage, Pitest now reports
  74% line coverage and 71% mutation coverage.
* Establishe a requirement for test coverage so these levels
  will be at least maintained.

The latest results with PIT:
>> Line Coverage: 1059/1435 (74%)
>> Generated 771 mutations Killed 546 (71%)
>> Mutations with no coverage 167. Test strength 90%