@@ -44,6 +44,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-XX:TieredStopAtLevel=1 -XX:-TieredCompilation
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf=ALL-UNNAMED
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf.factory=ALL-UNNAMED
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf.internal=ALL-UNNAMED
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf.internal.type=ALL-UNNAMED
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf.serialiser=ALL-UNNAMED
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf.sorter=ALL-UNNAMED
+						--add-opens space.arim.dazzleconf/space.arim.dazzleconf.validator=ALL-UNNAMED</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -78,6 +88,30 @@
 					<goals>verify</goals>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.6.7</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>mutationCoverage</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<coverageThreshold>70</coverageThreshold>
+					<mutationThreshold>70</mutationThreshold>
+					<threads>2</threads>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.pitest</groupId>
+						<artifactId>pitest-junit5-plugin</artifactId>
+						<version>0.14</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -102,6 +136,24 @@
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-params</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>nl.jqno.equalsverifier</groupId>
+			<artifactId>equalsverifier</artifactId>
+		</dependency>
+		<dependency> <!-- Required for pitest's forked JVM schenanigans (PITEST-910) -->
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
